# SpeedFlux

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-RS  README.md  docker-compose.yml  main.py  requirements.txt
speedflux/: __init__.py  config.py  data.py  influx.py
src/: config.rs  influxdb.rs  main.rs
src/services/: mod.rs  service.rs
src/services/ping/: config.rs  model.rs  service.rs
src/services/speedtest/: config.rs  mod.rs  model.rs  service.rs
